--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.3.5",
     "debug": "~4.1.1",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
+    "express": "^4.17.1",
     "morgan": "~1.9.1",
+    "pug": "^3.0.0",
     "restler": "~3.4.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0"
+    "grunt": "^1.3.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-nodeunit": "^2.1.0",
+    "grunt-contrib-uglify": "^5.0.0"
   }
 }
